# Kurs_3

./: README.md  pyproject.toml
kur/: class_.py  main.py  settings.py  utils.py
tests/: conftests.py  test_main.py  test_utils.py
