[tool.poetry]
name = "kur"
version = "0.1.0"
description = ""
authors = ["Burlakov Anton <burlakovanton99@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
toolz = "^0.12.0"
pytest = "^7.4.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
